--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
